botões ver ed salvar

--- a/src/app/academy-manager/admin-students/admin-students.component.html
+++ b/src/app/academy-manager/admin-students/admin-students.component.html
@@ -38,7 +38,9 @@
           </div>
         </td>
         <td>
-          <button (click)="showProfile(student.studentUser.id)" class="btn btn-success">Ver</button>
+          <button (click)="showProfile(student.studentUser.id)" class="btn btn-borderless">
+            <fa-icon [icon]="faEye"></fa-icon>
+          </button>
         </td>
       </tr>
     </tbody>
