minor fixes in appearance

--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4 ml-3 mr-3" *ngIf="academy$| async as academy">
+<div class="container mt-4 ml-4" *ngIf="academy$| async as academy">
 
   <div>
   <h3>Bem-Vindo</h3>
