--- a/src/app/academy-manager/teacher-academies/teacher-academies.component.html
+++ b/src/app/academy-manager/teacher-academies/teacher-academies.component.html
@@ -1,7 +1,7 @@
   <!-- Filter Fields -->
 
-  <div class="row ml-2 mb-4">
-    <div class="col-12">
+  <div class="row ml-4 mt-4 mb-4">
+    <div class="col-4">
       <input name="name" #name = "ngModel" type="text" class="form-control" [(ngModel)] = "nameFilter" placeholder="Nome da Academia" (input) = "filterTable()">
     </div>
   </div>
