--- a/src/app/academy-manager/account-profile/account-profile.component.html
+++ b/src/app/academy-manager/account-profile/account-profile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user$ | async as user">
+<div class="ml-5 mt-3" *ngIf="user$ | async as user">
     <div *ngIf="account$ | async as account">
         <form class="ml-4" #updateAccountForm="ngForm" (ngSubmit)="updateAccount()">
             <div class="py-2">
@@ -27,55 +27,61 @@
                     </div>
                 </div>
 
-                <div class="col-md-7 text-left my-3 ml-3">
+                <div class="col-md-4 text-left my-3">
 
+                    <div class="form-inline">
+                        <label style="font-weight: bolder;">Data de Nascimento:</label>
+                        <input [readonly]="!inUpdate" #ageField="ngModel" [(ngModel)]="account.age" name="age" id="age"
+                            type="date" [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
+                            [placeholder]="account.age === null ? '' : account.age">
+                    </div>
+                    <div class="h-divider"></div>
+                    <div class="form-inline">
+                        <label style="font-weight: bolder;">Área de Formação:</label>
+                        <input [readonly]="!inUpdate" #academicBackgroundField="ngModel"
+                            [(ngModel)]="account.academicBackground" id="academicBackground" name="academicBackground"
+                            type="text" [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
+                            [placeholder]="account.academicBackground === null ? '' : account.academicBackground">
+                    </div>
 
-                    <label style="font-weight: bolder;">Data de Nascimento:<input [readonly]="!inUpdate"
-                            #ageField="ngModel" [(ngModel)]="account.age" name="age" id="age" type="date"
+                    
+
+                    
+
+                </div>
+                <div class="col-md-4 text-left my-3">
+                    <div class="form-inline">
+                        <label style="font-weight: bolder;">NIF:</label>
+                        <input [readonly]="!inUpdate" #nifField="ngModel" [(ngModel)]="account.nif" id="nif" name="nif"
+                            type="number" [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
+                            placeholder="account.nif">
+                    </div>
+                    <div class="form-inline">
+                        <label style="font-weight: bolder;">Grau académico:</label>
+                        <input [readonly]="!inUpdate" #academicDegreeField="ngModel"
+                            [(ngModel)]="account.academicDegree" id="academicDegree" name="academicDegree" type="text"
                             [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            [placeholder]="account.age === null ? '' : account.age"></label>
-
-                    <label style="font-weight: bolder;">Área de Formação:<input [readonly]="!inUpdate"
-                            #academicBackgroundField="ngModel" [(ngModel)]="account.academicBackground"
-                            id="academicBackground" name="academicBackground" type="text"
-                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            [placeholder]="account.academicBackground === null ? '' : account.academicBackground"></label>
-
-                    <label style="font-weight: bolder;">Grau académico:<input [readonly]="!inUpdate"
-                            #academicDegreeField="ngModel" [(ngModel)]="account.academicDegree" id="academicDegree"
-                            name="academicDegree" type="text"
-                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            [placeholder]="account.academicDegree === null ? '' : account.academicDegree"></label>
-
-                    <label style="font-weight: bolder;">NIF:<input [readonly]="!inUpdate" #nifField="ngModel"
-                            [(ngModel)]="account.nif" id="nif" name="nif" type="number"
-                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            placeholder="account.nif"></label>
-
+                            [placeholder]="account.academicDegree === null ? '' : account.academicDegree">
+                    </div>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4 text-left ">
                     <div style="font-weight: bolder; font-style: italic; font-size: large;">Contactos:</div>
                     <div> <label style="font-weight: bolder;">Email: </label>
-                        <div> {{user.email}}</div>
+                        <span> {{user.email}}</span>
                     </div>
-                    <label style="font-weight: bolder;"><fa-icon [icon]="faLinkedin" style="color: blue;" size="2x"></fa-icon><input [readonly]="!inUpdate"
-                            #linkedInAdressField="ngModel" [(ngModel)]="account.linkedInAdress" id="linkedInAdress"
-                            name="linkedInAdress" type="text"
-                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            [placeholder]="account.linkedInAdress === null ? '' : account.linkedInAdress"></label>
-                    <label style="font-weight: bolder;">Telemovel:<input [readonly]="!inUpdate"
-                            #mobilePhoneField="ngModel" [(ngModel)]="account.mobilePhone" id="mobilePhone"
-                            name="mobilePhone" type="text"
-                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
-                            placeholder="account.mobilePhone"></label>
+                    
                 </div>
-                <div class="col-md-7 ml-3 text-left ">
-                    <div style="font-weight: bolder; font-style: italic; font-size: large;">Academias:</div>
-                    <div *ngIf="accountAcademies === undefined">
-                        <p><i>Sem academias</i></p>
-                    </div>
+                <div class="col-md-4 ml-3 text-left ">
+                    <div class="form-inline">
+                        <fa-icon [icon]="faLinkedin" style="color: blue;" size="2x"></fa-icon>
+                        <input [readonly]="!inUpdate" #linkedInAdressField="ngModel" [(ngModel)]="account.linkedInAdress"
+                            id="linkedInAdress" name="linkedInAdress" type="text"
+                            [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
+                            [placeholder]="account.linkedInAdress === null ? '' : account.linkedInAdress">  
+                </div>
+                <div style="font-weight: bolder; font-style: italic; font-size: large;">Academias:</div>
                     <div *ngIf="accountAcademies$ | async as academies">
                         <div *ngIf="academies?.length === 0 || academies === null">
                             <p><i>Sem academias</i></p>
@@ -87,6 +93,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-3 text-left ">
+                    <div class="form-inline">
+                        <label style="font-weight: bolder;">Telemóvel:</label>
+                        <input [readonly]="!inUpdate"
+                                #mobilePhoneField="ngModel" [(ngModel)]="account.mobilePhone" id="mobilePhone"
+                                name="mobilePhone" type="text"
+                                [ngClass]="{'form-control': inUpdate, 'form-control-plaintext': !inUpdate}"
+                                placeholder="account.mobilePhone">
+                            </div>
 
                     <!--  Temas (só para formadores) -->
                     <div *ngIf="user?.role === 'SUPERUSER'">
@@ -121,10 +137,11 @@
                     <div *ngIf="user?.role === 'USER'">
                         <div class="mt-3" *ngIf="misses$ | async as misses">
 
-                            <div style="font-weight: bolder; font-style: italic; font-size: large;">Faltas: <button *ngIf="inUpdate" class="btn btn-borderless"
-                                (click)="openModal(templateAddMissedDay)">
-                                <fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon>
-                            </button></div>
+                            <div style="font-weight: bolder; font-style: italic; font-size: large;">Faltas: <button
+                                    *ngIf="inUpdate" class="btn btn-borderless"
+                                    (click)="openModal(templateAddMissedDay)">
+                                    <fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon>
+                                </button></div>
 
                             <div *ngIf="misses?.length === 0">
                                 <p><i>Sem faltas</i></p>
@@ -159,7 +176,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -168,7 +185,9 @@
             <div class="container col-md-12" *ngIf="user?.role === 'USER'">
                 <div class="inline mt-2 text-left">
                     <span style="font-weight: bolder; font-size: larger;"><i> Declarações de Recebimento </i></span>
-                    <button class="btn btn-borderless" (click)="openModal(templateAddDeclaration)"><fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon></button>
+                    <button class="btn btn-borderless" (click)="openModal(templateAddDeclaration)">
+                        <fa-icon [icon]="faPlusCircle" style="color:#007bff" size="2x"></fa-icon>
+                    </button>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-12 mt-2 text-left">
@@ -212,7 +231,9 @@
                                                 <fa-icon [icon]="faTimesCircle" style="color:red" size="2x"></fa-icon>
                                             </button></p>
                                     </td>
-                                    <td><button class="btn btn-borderless" (click)="deleteDeclaration(declaration.id)"><fa-icon [icon]="faTrashAlt" size="2x"></fa-icon></button></td>
+                                    <td><button class="btn btn-borderless" (click)="deleteDeclaration(declaration.id)">
+                                            <fa-icon [icon]="faTrashAlt" size="2x"></fa-icon>
+                                        </button></td>
                                 </tr>
                             </tbody>
                         </table>
