--- a/src/app/academy-manager/my-declarations/my-declarations.component.scss
+++ b/src/app/academy-manager/my-declarations/my-declarations.component.scss
@@ -5,3 +5,10 @@
     width:500px;
     border-top:1px solid gray;
    }
+
+td{
+    vertical-align: middle;
+    p{
+        margin: auto;
+    }
+}
