--- a/src/app/academy-manager/my-profile/my-profile.component.html
+++ b/src/app/academy-manager/my-profile/my-profile.component.html
@@ -1,4 +1,4 @@
-<div id="profileContainer" class="container mt-2 ml-4" style="width: 1000px;">
+<div id="profileContainer" class="container mt-2 ml-5">
     <div class="row text-center mt-3">
         <div class="col-md-3 mt-5 text-left ">
             <img class="rounded-circle center-block" style="width: auto; max-height: 200px;" alt="100x100"
@@ -12,7 +12,7 @@
                             (click)='save()'> <fa-icon [icon]="faSave" size="2x"></fa-icon>
                         </button>
                         <button type="button" class="btn btn-borderless"
-                            (click)='MakeEdit()'> <fa-icon [icon]="faEdit"></fa-icon>
+                            (click)='MakeEdit()'> <fa-icon [icon]="faEdit" size="2x"></fa-icon>
                         </button>
                     </div>
                 </div>
