--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -25,16 +25,16 @@
     </div>
   </div>
 
-  <div class=mt-3>
+  <div class="mt-3">
     <button type="button" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="isCollapsed" aria-controls="collapseBasic">Links
     </button>
-    <div class=mt-3 id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
+    <div class="mt-3" id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
       <div class="well well-lg card card-block card-header">{{academy.usefulInfo}}</div>
     </div>
   </div>
 
-  <div class=mt-3>
+  <div class="mt-3">
     <accordion [isAnimated]="true">
       <accordion-group heading="Detalhes">
         <table class="table">
